<resources>
    <string name="app_name">Renting</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signupactivity">Signupactivity</string>
    <string name="title_activity_categories">Categories</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_second">Second</string>
    <string name="title_activity_third">Third</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="email">Email Id</string>
    <string name="mobile">Mobile Number</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>

    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_rental_booking">RentalBooking</string>
    <string name="title_activity_process_tracking">ProcessTracking</string>
    <string name="title_activity_my_account">MyAccount</string>
    <string name="title_activity_my_account_edit">MyAccountEdit</string>
    <string name="title_activity_nothing">Nothing</string>
</resources>
